--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
 
-    <title>Infostide | STAGING</title>
+    <title>Infostide | Dashboard</title>
     <meta
       name="description"
       content="The starting point for your next project with Infostide UI Kit, built on the newest version of Material-UI ©, ready to be customized to your style"
